--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.2.0",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "yup": "^1.4.0"
   },
